<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qoobody_ros_bridge</name>
  <version>0.1.0</version>
  <description>
    QooBody ROS 2 Bridge — bridges qoobody MuJoCo simulation to ROS 2 topics.
    Publishes: joint_states, imu, camera, lidar, foot_contact
    Subscribes: cmd_vel, joint_commands
  </description>
  <maintainer email="dev@qoobot.org">QooBot Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>python3-numpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
