[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain_ai"
version = "0.1.0"
description = "Brain OS AI Engine — LLM/VLA/Perception/Planning runtime"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Brain OS Team", email = "dev@brain-os.org"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.25",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pydantic>=2.5",
    "opencv-python>=4.9",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.1",
    "mypy>=1.8",
]
torch = ["torch>=2.1"]
tensorrt = ["tensorrt>=8.6"]
llama-cpp = ["llama-cpp-python>=0.2"]
onnx = ["onnxruntime-gpu>=1.17"]
vllm = ["vllm>=0.2"]

[project.scripts]
brain-ai = "brain_ai.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
