<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>brain_core</name>
  <version>0.1.0</version>
  <description>Brain OS Real-time Engine — ROS 2 node skeleton, behavior tree executor, safety monitor, motion planner, gRPC bridge</description>
  <maintainer email="dev@qoobot.dev">QooBot Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 core -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Motion planning (optional, for later phases) -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>

  <!-- Safety -->
  <depend>fcl</depend>

  <!-- gRPC -->
  <depend>protobuf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
